#
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[build-system]
requires = ["setuptools", "cffi>=1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-qpid-proton"
description = "An AMQP based messaging library."
readme = "README.rst"
license = {text = "Apache Software License"}
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
    "cffi>=1.0.0"
]
authors = [
    {name = "Apache Qpid", email = "users@qpid.apache.org"}
]
dynamic = ["version"]

[project.urls]
homepage = "http://qpid.apache.org/proton/"

[project.optional-dependencies]
opentracing = ["opentracing", "jaeger_client"]

[tool.setuptools]
packages = ["proton"]
py-modules = ["cproton"]
# cffi-modules = "ext_build.py:ffibuilder"

[tool.setuptools.dynamic]
version = {file = "VERSION.txt"}

[tool.setuptools.package-data]
"proton" = ["py.typed"]
