[metadata]
name = python-qpid-proton
version = file: VERSION.txt
description = An AMQP based messaging library.
long_description = file: README.rst
author = Apache Qpid
author_email = users@qpid.apache.org
url = http://qpid.apache.org/proton/
license = Apache Software License
classifiers =
  License :: OSI Approved :: Apache Software License
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12

[options]
packages = proton
py_modules = cproton
setup_requires = cffi>=1.0.0
install_requires = cffi>=1.0.0

[options.extras_require]
opentracing = opentracing; jaeger_client

[flake8]
max-line-length = 125
